# agent-harness

./: .cz.toml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  REUSE-DEBT.md  REUSE.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: swarm_task.yml
.github/workflows/: ci.yml
agent_harness/: __init__.py  __main__.py  autoprompt.py  cli.py  coop.py  coop_bridge.py  inventory.py  loop.py  providers.py  spawn.py  status_board.py  supervisor.py  unit_of_work.py  units.py
docs/: AJL.md  ARCHITECTURE.md  AUTODEV.md  DECISIONS.md  EPICS.md  INTEGRATIONS.md  ORCHESTRATOR_PLAN.md  VISION.md  WORKFLOW.md
docs/inventory/: AJL_INVENTORY.md  ajl_shortlist.json
examples/: backlog.example.json
packaging/: backlog.fleet.json
packaging/systemd/: agent-harness-loop.service  agent-harness-loop.timer  install.sh
scripts/: local-ci.sh
tests/: test_autodev.py  test_cli.py  test_inventory.py  test_loop.py  test_supervisor.py
