[project]
name = "agent-harness"
version = "0.3.0"
description = "Universal multi-agent harness (orchestrator + swarms) under tzervas"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [{ name = "tzervas" }]
keywords = ["agents", "orchestrator", "swarm", "harness"]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
agent-harness = "agent_harness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_harness"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
